--- a/composer.json
+++ b/composer.json
@@ -31,9 +31,7 @@
         "source": "https://github.com/anomalylabs/blocks-module"
     },
     "require": {
-        "anomaly/streams-platform": "^1.6",
-        "anomaly/configuration-module": "^2.1",
-        "anomaly/settings-module": "^2.1"
+        "anomaly/streams-platform": "^2.0"
     },
     "autoload": {
         "psr-4": {
